--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.href = "https://connect.garmin.com/payment/verify/web";
+            location.replace("https://connect.garmin.com/payment/verify/web");
         };
     </script>
 </html>
