--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
     <script type="text/javascript">
         document.getElementById("myButton").onclick = function () {
-            location.replace("https://connect.garmin.com/payment/verify/web");
+            location.href = "com.garmin.connect.mobile.wallet://fitpay-app-to-app/";
         };
     </script>
 </html>
